unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Oracle_AR_Cust_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Oracle_AR_Cust_Account_Id__c</fullName>
    <label>Oracle AR Cust Account Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>