unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Oracle_AR_Cust_Number__c.field-meta.xml
<CustomField>
    <fullName>Oracle_AR_Cust_Number__c</fullName>
    <label>Oracle AR Cust Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>