unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Oracle_Booth_Id__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Booth_Id__c</fullName>
    <label>Oracle Booth Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>