unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Origination_City__c.field-meta.xml
<CustomField>
    <fullName>Origination_City__c</fullName>
    <label>Origination City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>