unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Origination_Country__c.field-meta.xml
<CustomField>
    <fullName>Origination_Country__c</fullName>
    <label>Origination Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>