unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Origination_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Origination_Postal_Code__c</fullName>
    <label>Origination Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>