unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Origination_State__c.field-meta.xml
<CustomField>
    <fullName>Origination_State__c</fullName>
    <label>Origination State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>