unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Outbound_Stage__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Stage__c</fullName>
    <label>Outbound Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>