unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Palletization__c.field-meta.xml
<CustomField>
    <fullName>Palletization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Palletization</label>
    <type>Checkbox</type>
</CustomField>