unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Palletization_Fee__c.field-meta.xml
<CustomField>
    <fullName>Palletization_Fee__c</fullName>
    <label>IN Palletization Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>