unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Parent_Quote__c.field-meta.xml
<CustomField>
    <fullName>Parent_Quote__c</fullName>
    <label>Parent Quote</label>
    <length>18</length>
    <type>Text</type>
</CustomField>