unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Pickup_Booth_No__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Booth_No__c</fullName>
    <label>Pickup Booth #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>