unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Pickup_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Contact_Email__c</fullName>
    <label>Pickup Contact Email</label>
    <type>Email</type>
</CustomField>