unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Pickup_Contact_Fax__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Contact_Fax__c</fullName>
    <label>Pickup Contact Fax</label>
    <type>Phone</type>
</CustomField>