unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Pickup_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Contact_Phone__c</fullName>
    <label>Pickup Contact Phone</label>
    <type>Phone</type>
</CustomField>