unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Pickup_Date__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Date__c</fullName>
    <label>Pickup Date</label>
    <type>Date</type>
</CustomField>