unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Pickup_Show_Name__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Show_Name__c</fullName>
    <label>Pickup Show Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>