unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Pickup_Window_Start__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Window_Start__c</fullName>
    <label>Pickup Window Start</label>
    <length>255</length>
    <type>Text</type>
</CustomField>