unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Project_Number__c</fullName>
    <label>Project #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>