unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Quote_CreatedByID__c.field-meta.xml
<CustomField>
    <fullName>Quote_CreatedByID__c</fullName>
    <label>Quote Created By ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>