unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Quote_CurrencyIsoCode__c.field-meta.xml
<CustomField>
    <fullName>Quote_CurrencyIsoCode__c</fullName>
    <label>Quote Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>