unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Quote_LastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>Quote_LastModifiedById__c</fullName>
    <label>Quote Last Modified By Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>