unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Quote_LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>Quote_LastModifiedDate__c</fullName>
    <label>Quote LastModifiedDate</label>
    <type>DateTime</type>
</CustomField>