unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Quote_Owner_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Quote_Owner_FirstName__c</fullName>
    <label>Quote Owner FirstName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>