unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Quote_Owner_LastName__c.field-meta.xml
<CustomField>
    <fullName>Quote_Owner_LastName__c</fullName>
    <label>Quote Owner LastName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>