unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Quote_OwnerId__c.field-meta.xml
<CustomField>
    <fullName>Quote_OwnerId__c</fullName>
    <label>Quote OwnerId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>