unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Quote_RecordType_Name__c.field-meta.xml
<CustomField>
    <fullName>Quote_RecordType_Name__c</fullName>
    <label>Quote RecordType_Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>