unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Quote_Subject__c.field-meta.xml
<CustomField>
    <fullName>Quote_Subject__c</fullName>
    <label>Quote Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>