unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Quoted_Residential_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Residential_Surcharge__c</fullName>
    <label>Quoted Residential Surcharge</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>