unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Quoted_Total__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Total__c</fullName>
    <label>Quoted Total</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>