unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Round_Trip_Discount__c.field-meta.xml
<CustomField>
    <fullName>Round_Trip_Discount__c</fullName>
    <label>IN Round Trip Discount (%)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>