unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <label>Sales Rep</label>
    <length>18</length>
    <type>Text</type>
</CustomField>