unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Selection__c.field-meta.xml
<CustomField>
    <fullName>Selection__c</fullName>
    <label>Selection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>