unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Ship_To_Location__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Location__c</fullName>
    <label>Ship To Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>