unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Shipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Type__c</fullName>
    <label>Shipment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>