unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Show__c.field-meta.xml
<CustomField>
    <fullName>Show__c</fullName>
    <label>Show</label>
    <length>80</length>
    <type>Text</type>
</CustomField>