unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Show_Occurrence__c.field-meta.xml
<CustomField>
    <fullName>Show_Occurrence__c</fullName>
    <label>Show Occurrence</label>
    <length>18</length>
    <type>Text</type>
</CustomField>