unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Show_Occurrence_Name__c.field-meta.xml
<CustomField>
    <fullName>Show_Occurrence_Name__c</fullName>
    <label>Show Occurrence Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>