unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Show_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Show_Open_Date__c</fullName>
    <label>Show Open Date</label>
    <type>DateTime</type>
</CustomField>