unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Special_Discount_Program__c.field-meta.xml
<CustomField>
    <fullName>Special_Discount_Program__c</fullName>
    <label>Special Discount Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>