unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/TMS_Inbound_Shipping_Order__c.field-meta.xml
<CustomField>
    <fullName>TMS_Inbound_Shipping_Order__c</fullName>
    <label>TMS Inbound Shipping Order #</label>
    <length>18</length>
    <type>Text</type>
</CustomField>