unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/TOPS_Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>TOPS_Quote_Number__c</fullName>
    <label>TOPS Quote Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>