unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <label>IN Total</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>