unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Wait_Time__c.field-meta.xml
<CustomField>
    <fullName>Wait_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wait Time (Non GES)</label>
    <type>Checkbox</type>
</CustomField>