unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Weekend_Fee__c.field-meta.xml
<CustomField>
    <fullName>Weekend_Fee__c</fullName>
    <label>IN Weekend Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>