unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <label>Width</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>