unpackaged/main/default/objects/TMS_Full_Shipping_Order_Stg__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Quote_Name__c</columns>
    <columns>FI_Name__c</columns>
    <columns>Line_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>